objects/AcctSeed__Financial_Report_Definition__c.object
<CustomObject>
    <description>Used to define reports which are aggregates of financial report columns and financial report rows.</description>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Number_of_Columns__c</fullName>
        <label>Number of Columns</label>
        <summaryForeignKey>AcctSeed__Financial_Report_Column__c.AcctSeed__Financial_Report_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Number_of_Rows__c</fullName>
        <label>Number of Rows</label>
        <summaryForeignKey>AcctSeed__Financial_Report_Row__c.AcctSeed__Financial_Report_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Percentage_Decimal_Places__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Percentage Decimal Places</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Statement Definition</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Statement Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statement Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>